added first blog post

--- a/src/index.html
+++ b/src/index.html
@@ -71,11 +71,9 @@
           </a>
         </li>
         <li>
-          <a
-            href="https://github.com/RajSolai/rajsolai.github.io/raw/master/res/solairajresume.pdf"
-          >
+          <a href="./blog">
             <span class="material-icons">description</span>
-            &nbsp;Resume
+            &nbsp;Blog
           </a>
         </li>
       </ul>
@@ -268,5 +266,19 @@
         </div>
       </div>
     </section>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3FQSWDLWDE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-3FQSWDLWDE");
+    </script>
   </body>
 </html>
