migrated to new site

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       name="description"
       content="Solai Raj Student, Web, Mobile Developer, IoT and Cloud Enthusiast Web Profile."
     />
-    <link rel="canonical" href="http://solairaj.rf.gd/" />
+    <link rel="canonical" href="https://solairaj.pages.dev/" />
     <meta name="robots" content="index, follow" />
     <meta property="og:type" content="profile" />
     <meta
@@ -38,8 +38,8 @@
     />
     <meta property="og:image" content="LINK TO THE IMAGE FILE" />
     <meta property="og:url" content="http://solairaj.rf.gd/" />
-    <meta property="og:site_name" content="RajSolai" />
-    <meta name="twitter:title" content="RajSolai - Developer" />
+    <meta property="og:site_name" content="SolaiRaj" />
+    <meta name="twitter:title" content="SolaiRaj - Developer" />
     <meta
       name="twitter:description"
       content="Student , Web ,Mobile Developer IoT and AI enthusiast
@@ -100,7 +100,7 @@
           <img
             src="./img/mine.png"
             class="greetimg"
-            alt="rajsolai"
+            alt="solairaj"
             height="220px"
           />
         </div>
