updated sitemaps and etc

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       name="description"
       content="Solai Raj Student, Web, Mobile Developer, IoT and Cloud Enthusiast Web Profile."
     />
-    <link rel="canonical" href="https://solairaj.pages.dev/" />
+    <link rel="canonical" href="http://solairaj.rf.gd/" />
     <meta name="robots" content="index, follow" />
     <meta property="og:type" content="profile" />
     <meta
