added feedback function

--- a/src/index.html
+++ b/src/index.html
@@ -119,8 +119,8 @@
         then I engaged myself in the application development field. Apart from
         just coding apps, I developed interests in Robotics and IoT.  Now I Code
         Linux <em>GTK</em> apps, <em>IoT</em> apps, <em>Blockchain</em> smart
-        contracts and Mobile application development with <em>Flutter</em> /
-        React Native and Web Development with <em>ReactJS</em>. I do freelance
+        contracts and Mobile application development with <em>Flutter</em> /
+        React Native and Web Development with<em>ReactJS</em>. I do freelance
         for low cost, you can check the projects here and contact me here. As I
         mentioned am always curious to learn new, work on interesting projects
         to improve my skills, currently preparing for interviews and
@@ -211,8 +211,12 @@
       <h2>Get in Touch</h2>
       <br />
       <div class="interactive-hello">
-        <input type="text" placeholder="Type In a Message for Me !" />
-        <button class="hello-btn">Say Hello</button>
+        <input
+          type="text"
+          placeholder="Type In a Message for Me !"
+          id="messageBox"
+        />
+        <button class="hello-btn" onclick="sayHello()">Say Hello</button>
       </div>
       <p style="text-align: center">
         Contact via official Email <br />
@@ -220,6 +224,13 @@
       </p>
     </section>
     <hr />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"
+      integrity="sha512-u9akINsQsAkG9xjc1cnGF4zw5TFDwkxuc9vUp5dltDWYCSmyd0meygbvgXrlc/z7/o4a19Fb5V0OUE58J7dcyw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="./js/script.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
