remove mywork section

--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
         <span>Blockchain Smart Contracts</span>
       </div>
     </section>
-    <hr />
+    <!-- <hr />
     <section id="myworks" class="myworks">
       <h2>My Works</h2>
       <br />
@@ -198,14 +198,14 @@
             <p class="badge">Personal Project</p>
             <a href="#" target="_blank"><p>Checkout app here</p></a>
           </div>
-          <!-- <div class="row">
+         <div class="row">
             <h3>SRM VEC YRC Website</h3>
             <p>Official YRC website for SRM Valliammai Engineering College.</p>
             <p>Checkout website here</p>
-          </div> -->
+          </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <hr />
     <section id="contact" class="contact">
       <h2>Get in Touch</h2>
