now navbar has colors

--- a/src/index.html
+++ b/src/index.html
@@ -43,11 +43,11 @@
         >
           ☰
         </div>
-        <div style="color: #000; padding-left: 1rem">Solai Raj</div>
+        <div style="color: #f6d7a7; padding-left: 1rem">Solai Raj</div>
       </div>
     </header>
     <amp-sidebar
-      style="background-color: #fafafa; color: #000"
+      style="background-color: #064663; color: #000"
       id="sidebar1"
       layout="nodisplay"
       side="left"
