--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
       <br />
       <ul class="sidebar">
         <li class="sidebar-btn"><a href="#about">ABOUT</a></li>
-        <li class="sidebar-btn"><a href="#myworks">MY WORKS</a></li>
+        <li class="sidebar-btn"><a href="apps.html">MY WORKS</a></li>
         <li class="sidebar-btn"><a href="#contact">CONTACT</a></li>
         <li class="sidebar-btn"><a href="#">RESUME</a></li>
       </ul>
@@ -72,7 +72,7 @@
     <nav>
       <ul>
         <li class="nav-element"><a href="#about">ABOUT</a></li>
-        <li class="nav-element"><a href="#myworks">MY WORKS</a></li>
+        <li class="nav-element"><a href="apps.html">MY WORKS</a></li>
         <li class="nav-element"><a href="#contact">CONTACT</a></li>
         <li class="nav-element"><a href="#">RESUME</a></li>
       </ul>
@@ -91,19 +91,12 @@
       <h2 class="desc">Student | GTK | Web | IoT | Smart Contract Developer</h2>
       <br />
       <div class="row">
-        <a
-          href="https://github.com/RajSolai"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Github</a
-        >
-        &nbsp;&nbsp;
-        <a
-          href="https://www.linkedin.com/in/solai085/"
-          target="_blank"
-          rel="noopener noreferrer"
-          >LinkedIn</a
-        >
+        <img
+          src="https://img.shields.io/badge/LinkedIn-0077b5?style=for-the-badge&logo=linkedin&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/Github-000?style=for-the-badge&logo=github&logoColor=white"
+        />
       </div>
       <br />
       <br />
@@ -127,6 +120,7 @@
         internships. And that's it about me, thank you for spending your
         pleasure time giving a read.
       </p>
+      <hr />
       <h3>Skills am familiar with,</h3>
       <div class="skills">
         <span>Linux - Operating systems and GNU core utils</span>
