added links for social networks

--- a/src/index.html
+++ b/src/index.html
@@ -91,12 +91,12 @@
       <h2 class="desc">Student | GTK | Web | IoT | Smart Contract Developer</h2>
       <br />
       <div class="row">
-        <img
+        <a href="https://www.linkedin.com/in/solai085/" target="_blank"><img
           src="https://img.shields.io/badge/LinkedIn-0077b5?style=for-the-badge&logo=linkedin&logoColor=white"
-        />
-        <img
+	  /></a>&nbsp;
+	<a href="https://github.com/RajSolai" target="_blank"><img
           src="https://img.shields.io/badge/Github-000?style=for-the-badge&logo=github&logoColor=white"
-        />
+	  /></a>
       </div>
       <br />
       <br />
